--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "concurrently": "^9.1.2",
     "live-server": "^1.2.2",
     "npm-check-updates": "^17.1.14",
-    "rollup": "^4.34.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup": "^4.34.1"
   }
 }
