--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "license": "ISC",
   "dependencies": {
     "@shoelace-style/shoelace": "^2.20.0",
-    "lit": "^3.2.1"
+    "lit": "^3.2.1",
+    "prismjs": "^1.29.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.2",
     "@rollup/plugin-node-resolve": "^16.0.0",
     "concurrently": "^9.1.2",
     "live-server": "^1.2.2",
