--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -12,34 +12,41 @@ jobs:
     steps:
       # 1. Check out the repository.
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      # 2. Set up Node.js.
+      # 2. Set up Node.js using the latest recommended version.
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: 16
+          node-version: '20'
 
-      # 3. Install dependencies.
+      # 3. Cache npm modules to speed up builds.
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      # 4. Install dependencies (using a reproducible install).
       - name: Install Dependencies
-        run: npm install
+        run: npm ci
 
-      # 4. Build the project (this runs the "build" script from package.json,
-      #    which invokes rollup to produce the bundle in the dist folder).
+      # 5. Build the project using Vite.
       - name: Build Project
         run: npm run build
 
-      # 5. Prepare the deployment folder.
-      #    Here we create a "public" folder and copy index.html and the entire dist folder.
+      # 6. Prepare the deployment folder.
       - name: Prepare Deployment Files
         run: |
           mkdir public
           cp index.html public/
           cp -R dist public/
 
-      # 6. Deploy the content of the public folder to the gh-pages branch.
+      # 7. Deploy the content of the public folder to the gh-pages branch.
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
