--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -37,9 +37,16 @@ jobs:
       - name: Build Project
         run: npm run build
 
-      # 6. Deploy the built files directly from the dist folder to the gh-pages branch.
+      # 6. Prepare the deployment folder.
+      - name: Prepare Deployment Files
+        run: |
+          mkdir public
+          cp index.html public/
+          cp -R dist public/
+
+      # 7. Deploy the content of the public folder to the gh-pages branch.
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./public
