--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -29,7 +29,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      # 4. Install dependencies (using a reproducible install).
+      # 4. Install dependencies.
       - name: Install Dependencies
         run: npm ci
 
@@ -37,9 +37,9 @@ jobs:
       - name: Build Project
         run: npm run build
 
-      # 6. Deploy the built site to GitHub Pages using an action
+      # 6. Deploy the built files directly from the dist folder to the gh-pages branch.
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
