--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@shoelace-style/shoelace": "^2.20.0",
+    "biwascheme": "^0.8.0",
     "lit": "^3.2.1",
     "prismjs": "^1.29.0"
   },
