--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@codemirror/language": "^6.10.8",
+    "@codemirror/legacy-modes": "^6.4.3",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/view": "^6.36.3",
     "@shoelace-style/shoelace": "^2.20.0",
     "biwascheme": "^0.8.0",
+    "codemirror": "^6.0.1",
     "lit": "^3.2.1",
     "prismjs": "^1.29.0"
   },
